<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:alpha="0.9"
    android:background="@color/black"
    android:paddingTop="22dp"
    android:paddingBottom="22dp"
    android:paddingStart="26dp"
    android:paddingEnd="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/dialog_label"
            android:text="@string/phone_number_list_name"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_target_name"
            style="@style/dialog_edit"
            android:singleLine="true"
            android:maxLength="5"
            android:ellipsize="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/dialog_label"
            android:text="@string/phone_number_list_number"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_target_phone"
            style="@style/dialog_edit"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:maxLength="11"
            android:inputType="phone"
            android:digits="@string/number_rule"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
       >

        <TextView
            style="@style/dialog_label"
            android:text="运营商"
            android:textSize="14sp"/>

        <Spinner
            android:id="@+id/spinner_vendor"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:background="@drawable/comman_edit_text_bkg"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:dropDownVerticalOffset="34dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/dialog_label"
            android:text="@string/phone_number_list_remark"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_target_remark"
            style="@style/dialog_edit"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:maxLength="6"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_edit"
            android:layout_height="36dp"
            android:textColor="@color/darkorange"
            android:background="@drawable/comman_button_bkg"
            android:layout_width="88dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_edit_name_list"
            android:textColor="@color/darkorange"
            android:background="@drawable/comman_button_bkg"
            android:layout_height="36dp"
            android:layout_marginStart="18dp"
            android:layout_width="88dp"
            android:text="@string/add"/>
    </LinearLayout>
</LinearLayout>