<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/ivBack"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"/>
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/phone_number_manage_title"
        android:textColor="@color/white"
        android:textSize="27dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray_2a2"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:id="@+id/clTitle">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvOrder"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="15dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/phone_number_list_order"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tvName"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvName"
            android:textColor="@color/white"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="15dp"
            app:layout_constraintHorizontal_weight="2"
            android:text="@string/phone_number_list_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tvOrder"
            app:layout_constraintRight_toLeftOf="@+id/tvPhoneNumber"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvPhoneNumber"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_weight="3"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="15dp"
            android:text="@string/phone_number_list_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tvName"
            app:layout_constraintRight_toLeftOf="@+id/tvRemark"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvRemark"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="15dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_weight="1"
            android:text="@string/phone_number_list_remark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tvPhoneNumber"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="350dp"
        app:layout_constraintLeft_toLeftOf="@id/clTitle"
        app:layout_constraintRight_toRightOf="@id/clTitle"
        android:background="@color/gray_40"
        app:layout_constraintTop_toBottomOf="@id/clTitle"
        android:id="@+id/rvPhoneNumberList"/>
    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/rvPhoneNumberList"
        android:layout_marginTop="10dp"
        android:background="@drawable/bound_red_5dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:text="添加"
        app:layout_constraintLeft_toLeftOf="@+id/rvPhoneNumberList"
        android:id="@+id/btnAdd"/>
</android.support.constraint.ConstraintLayout>