<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="25dp"
        android:text="定  位"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_40"/>

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_white_30dp_corner_border"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"/>

    <com.synway.passive.location.widget.CircleProgressView
        android:id="@+id/circle_progress"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>


    <RadioGroup
        android:id="@+id/rgLocateMode"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_white_30dp_hollow_width2dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rbLowInputGain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/locate_mode_radio_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/low_input_gain"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbMediumInputGain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/locate_mode_radio_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/medium_input_gain"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbHighInputGain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/locate_mode_radio_bg"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/high_input_gain"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbSmart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/locate_mode_radio_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/smart"
            android:textColor="@color/white" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="15dp">
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:layout_marginRight="20dp"/>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:gravity="right">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="近"
               android:textColor="@color/white"
               android:textSize="18sp"
               />

           <com.synway.passive.location.widget.TriangleView
               android:layout_width="15dp"
               android:layout_height="0dp"
               android:layout_weight="1"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="远"
               android:textColor="@color/white"
               android:textSize="18sp" />
       </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_trigger_status"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="12dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/energy_trend"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/tvInductionHitCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:text="命中 次"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>



    <Button
        android:id="@+id/bntStartInduction"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/bound_red_20dp"
        android:text="@string/start_induction"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>